# consenJolt

./: .gitignore  Cargo.toml  README.md
guest/: Cargo.toml
guest/src/: lib.rs  main.rs
lib/: Cargo.toml
lib/src/: beacon_state.rs  file.rs  input.rs  lib.rs  ssz.rs
src/: main.rs
src/cli/: fork.rs  operation.rs
