[package]
name = "ream-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum_ssz = {workspace = true}
snap = "1.1.1"
tracing = {workspace = true}
serde = { version = "1.0.200", default-features = false, features = ["derive"] }

# ReamBeaconState
# alloy-primitives = { version = "0.8", features = ['serde'] }
# anyhow = "1.0"
# ethereum_ssz_derive = "0.8"
# ssz_types = "0.10"
# tree_hash = "0.9"
# tree_hash_derive = "0.9"


# Ream dependencies
ream-consensus = { workspace = true }
